Temporary fix to layout problem, may need further investigation.

--- a/css/portfolioqueries.css
+++ b/css/portfolioqueries.css
@@ -1217,6 +1217,172 @@ p {
     display: unset;
 }
 
+.box1--dark h1 {
+  background: #0E1428;
+  margin-top: 0px;
+  margin-left: 0em;
+  color:#d95d39;
+  z-index: 1;
+}
+
+.box1--dark h3 {
+  color:#FEE3C3;
+}
+
+.box1--dark-ux {
+  background: #0E1428;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  padding: 20px;
+  box-shadow: 6px 5px 5px 1px rgb(0 0 0 / 20%);
+}
+
+.box2--light-ux {
+  display: flex;
+  flex-direction: column;
+  background: #d95d39;
+  margin-top: 1em;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  padding: 20px;
+}
+
+.iframe {
+  width: 100%;
+  height: 1016px;
+  object-fit: cover;
+  zoom: 1;
+  -moz-transform: scale(0.75);
+  -moz-transform-origin: 0 0;
+  -o-transform: scale(0.75);
+  -o-transform-origin: 0 0;
+  -webkit-transform: scale(0.75);
+  -webkit-transform-origin: 0 0;
+}
+
+.iframecontainer {
+  width: 96em;
+  height: 760px;
+  margin-left: 14.5%;
+  margin-right: 0%;
+  overflow: hidden;
+}
+
+.miroh3 {
+  margin-left: -223px;
+}
+
+.prototypediv {
+  width: 80vw;
+  margin: -20px;
+  margin-bottom: 7em;
+}
+
+.pdf {
+  width: 100%;
+  height: 80%;
+  object-fit: cover;
+}
+
+.pdfwrapper {
+  width: 100%;
+  height: 90em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: -8em;
+  position: relative;
+}
+
+.pdfwrapper h3 {
+  margin-left: -223px;
+}
+
+.portfoliopagesection {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  flex-grow: 0;
+  column-gap: 7em;
+  row-gap: 4em;
+  background: #0E1428;
+  margin: 0px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  color: #FEE3C3;
+  width: 80%;
+  height: 430%;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 4em;
+  box-shadow: 6px 5px 5px 1px rgba(0,0,0,0.2);
+  justify-content: space-around;
+}
+
+.portfoliopagesection a {
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.portfoliopagesection a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+.portfoliopagesection a:link {
+  color: #FEE3C3;
+}
+
+/* visited link */
+.portfoliopagesection a:visited {
+  color: #d95d39;
+}
+
+/* mouse over link */
+.portfoliopagesection a:hover {
+  color: #FEE3C3;
+}
+
+/* selected link */
+.portfoliopagesection a:active {
+  color: #FEE3C3;
+  
+}
+
+.portfoliopagesection img {
+  width: 100%;
+}
+
+.testheader {
+  margin-top: 80px;
+  padding-left: 80px;
+}
+
+.testheader h2, h3 {
+  padding-left: 222px;
+}
+
+.ux p {
+  text-align: left;
+  margin-top: 0em;
+  color: #0E1428;
+  font-weight: 600;
+}
+
+.uxheader > h2, h3 {
+  padding-left: 222px;
+}
+
+.uxlist {
+  font-size: 20px;
+  color: #FEE3C3;
+  margin-bottom: 20px;
+  } 
+
 /* HOMEPAGE */
 
 /* .aboutsection {
@@ -1385,8 +1551,6 @@ margin-left: 0px;
     margin-top: 50px;
 } */
 
-}
-
 /* XX-Large devices (larger desktops, 1400px and up) */
 @media  (min-width: 1400px) {
     * {
@@ -1510,9 +1674,175 @@ margin-left: 0px;
     }
     
     .prototypediv {
-        /* margin-bottom: -8em; */
+        margin-bottom: -8em;
         display: unset;
     }
+
+    .box1--dark h1 {
+      background: #0E1428;
+      margin-top: 0px;
+      margin-left: 0em;
+      color:#d95d39;
+      z-index: 1;
+    }
+    
+    .box1--dark h3 {
+      color:#FEE3C3;
+    }
+    
+    .box1--dark-ux {
+      background: #0E1428;
+      margin-top: 20px;
+      margin-left: auto;
+      margin-right: auto;
+      width: 80%;
+      padding: 20px;
+      box-shadow: 6px 5px 5px 1px rgb(0 0 0 / 20%);
+    }
+    
+    .box2--light-ux {
+      display: flex;
+      flex-direction: column;
+      background: #d95d39;
+      margin-top: 1em;
+      margin-left: auto;
+      margin-right: auto;
+      width: 80%;
+      padding: 20px;
+    }
+    
+    .iframe {
+      width: 100%;
+      height: 1016px;
+      object-fit: cover;
+      zoom: 1;
+      -moz-transform: scale(0.75);
+      -moz-transform-origin: 0 0;
+      -o-transform: scale(0.75);
+      -o-transform-origin: 0 0;
+      -webkit-transform: scale(0.75);
+      -webkit-transform-origin: 0 0;
+    }
+    
+    .iframecontainer {
+      width: 96em;
+      height: 760px;
+      margin-left: 14.5%;
+      margin-right: 0%;
+      overflow: hidden;
+    }
+    
+    .miroh3 {
+      margin-left: -223px;
+    }
+    
+    .prototypediv {
+      width: 80vw;
+      margin: -20px;
+      margin-bottom: 7em;
+    }
+    
+    .pdf {
+      width: 100%;
+      height: 80%;
+      object-fit: cover;
+    }
+    
+    .pdfwrapper {
+      width: 100%;
+      height: 90em;
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: -8em;
+      position: relative;
+    }
+    
+    .pdfwrapper h3 {
+      margin-left: -223px;
+    }
+    
+    .portfoliopagesection {
+      display: flex;
+      flex-wrap: nowrap;
+      flex-direction: column;
+      flex-grow: 0;
+      column-gap: 7em;
+      row-gap: 4em;
+      background: #0E1428;
+      margin: 0px;
+      margin-bottom: 30px;
+      margin-left: auto;
+      margin-right: auto;
+      color: #FEE3C3;
+      width: 80%;
+      height: 430%;
+      padding-top: 20px;
+      padding-right: 20px;
+      padding-left: 20px;
+      padding-bottom: 4em;
+      box-shadow: 6px 5px 5px 1px rgba(0,0,0,0.2);
+      justify-content: space-around;
+    }
+    
+    .portfoliopagesection a {
+      margin-left: 20%;
+      margin-right: 20%;
+    }
+    
+    .portfoliopagesection a {
+      color: #FFFFFF;
+      text-decoration: none;
+    }
+    
+    .portfoliopagesection a:link {
+      color: #FEE3C3;
+    }
+    
+    /* visited link */
+    .portfoliopagesection a:visited {
+      color: #d95d39;
+    }
+    
+    /* mouse over link */
+    .portfoliopagesection a:hover {
+      color: #FEE3C3;
+    }
+    
+    /* selected link */
+    .portfoliopagesection a:active {
+      color: #FEE3C3;
+      
+    }
+    
+    .portfoliopagesection img {
+      width: 100%;
+    }
+    
+    .testheader {
+      margin-top: 80px;
+      padding-left: 80px;
+    }
+    
+    .testheader h2, h3 {
+      padding-left: 222px;
+    }
+    
+    .ux p {
+      text-align: left;
+      margin-top: 0em;
+      color: #0E1428;
+      font-weight: 600;
+    }
+    
+    .uxheader > h2, h3 {
+      padding-left: 222px;
+    }
+    
+    .uxlist {
+      font-size: 20px;
+      color: #FEE3C3;
+      margin-bottom: 20px;
+    } 
 
       /* HOMEPAGE */
 /*       
@@ -1959,4 +2289,4 @@ margin-left: 0px;
         padding-top: 10px;
         padding-left: 106px;
       }   */
- }
+ 
